--- a/junctions/junc/templates/junc/junction_list.html
+++ b/junctions/junc/templates/junc/junction_list.html
@@ -25,8 +25,10 @@
           <h2><u>List All</u></h2>
           </div>
           <h3>Count</h3>
-          <p>Iseceno : <strong>89</strong></p>
-          <p>Uhaseno : <strong>8</strong></p>
+          <p>Pun Rezim : <strong>{{ pr }}</strong></p>
+          <p>Part Time : <strong>{{ junction.corr }}</strong></p>
+          <p>Nema Struje : <strong>{{ junction.corr }}</strong></p>
+          <p>Iskljucena : <strong>{{ junction.corr }}</strong></p>
        
       </div>
 </div>
