--- a/junctions/templates/index.html
+++ b/junctions/templates/index.html
@@ -2,13 +2,16 @@
 
 
 {% block content %}
+
+<div class="main">
 <div class="container">
-<h3>Welcome to Junction App</h3>
+<h1>Welcome to Junction App</h1>
 <p>ovo je index str btw...</p>
 
 <ol>
     <li>Uradi details</li>
     <li>Uradi update</li>
+    <li>Uradi validaciju imena - kor-mark</li>
     <li>Skini one nule</li>
     <li>Uradi Flex za LstAll</li>
     <li>Uradi Formu za Unos nove manuelno</li>
@@ -17,6 +20,7 @@
     <li>I ono, neki donut prikaz...</li>
 
 </ol>
+</div>
 </div>
 
 
