style gotov za sada- sledeci su juzeri i role

--- a/junctions/junc/templates/junc/junction_all_detail.html
+++ b/junctions/junc/templates/junc/junction_all_detail.html
@@ -18,6 +18,10 @@
                 <strong>{{junction.status}}</strong>
             </div>
             <div class="box">
+                <p>poslednja izmena</p>
+                <p>{{junction.updated_at|date:"d/M/y"}}</p>
+            </div>
+            <div class="box">
                 <p>Potrebno</p>
                 <strong id="potrebno">{{junction.needs}}</strong>
             </div>
