--- a/junctions/junc/templates/junc/junction_detail.html
+++ b/junctions/junc/templates/junc/junction_detail.html
@@ -16,6 +16,8 @@
             <p>Status : <strong>{{junction.status}}</strong></p>
             <p>Potrebni gradj. radovi: <strong>{{junction.civil_works_need}}</strong></p>
             <p>Dodatni Info : <strong>{{junction.add_info}}</strong></p>
+            <p>kreirano: <b>{{junction.created_at|date:"d/M/y - H:i"}}</b></p>
+            <p>poslednja izmena: <b> {{junction.updated_at|date:"d/M/y - H:i"}} </b></p>
 
             <a href="{% url 'junc:all' %}">
                 <button type="button" class="button1">&#8592;Nazad</button>
