--- a/junctions/junc/templates/junc/junction_list.html
+++ b/junctions/junc/templates/junc/junction_list.html
@@ -13,8 +13,11 @@
           <p>Junction : <strong>{{junction.corr}}-{{junction.mark}}</strong></p>
           <p>Status : <strong>{{junction.status}}</strong></p>
               <div class="last-line">
-                <a href="{% url 'junc:detail' pk=junction.pk %}">detalji</a>
-                <a href="{% url 'junc:update' pk=junction.pk %}">izmeni</a>
+                <span>
+                  <a href="{% url 'junc:detail' pk=junction.pk %}">detalji</a>
+                  <a href="{% url 'junc:update' pk=junction.pk %}">izmeni</a>
+                  <p><small>posl.izmena: {{junction.updated_at|date:"d/M/y"}}</small></p>
+                </span>
               </div>
         </div>
       {% endfor %}
