abstr user nije gotov i ne radi ofc

--- a/junctions/templates/base.html
+++ b/junctions/templates/base.html
@@ -30,6 +30,16 @@
                 <li>
                     <a id="home" href="{% url 'home' %}">Home</a>
                 </li>
+                <li>
+                    <a id="home" href="{% url 'home' %}">Log In</a>
+                </li>
+                <li>
+                    <a id="home" href="{% url 'junc:register' %}">Sign Up</a>
+                </li>
+               
+
+
+
             </ul>
         </div>
     </nav>
